<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">FoodApp</string>
    <string name="Accept_User">User Accepted</string>
    <string name="Cancel_Button">Cancel</string>
    <string name="Deny_User">User Denied</string>
    <string name="Device_Already_Registered">Device already registered.</string>
    <string name="Device_ID_GCM">GCM device ID: </string>
    <string name="Device_ID">Device ID: </string>
    <string name="Device_Registered">New device registered.</string>
    <string name="Forward_Slash">/</string>
    <string name="GCM_complete_message">Your ride has completed</string>
    <string name="GCM_escrow_message">You have been paid</string>
    <string name="GCM_pending_message">A user wants to fulfill a request</string>
    <string name="Generic_Bad_RadioButton">Problem with radio buttons.</string>
    <string name="Generic_Failure">Failed!</string>
    <string name="Generic_Success">Success!</string>
    <string name="Login_Button">Login</string>
    <string name="Login_Text">Login to Food App</string>
    <string name="No_Change">Nothing changed.</string>
    <string name="OK_Button">OK</string>
    <string name="Pending_Error">Error loading request</string>
    <string name="Pending_Text">wants to fulfill your request for ride number</string>
    <string name="Ride_Bad_City_Field">Problem with city fields.</string>
    <string name="Ride_Bad_Complete_Visibility">Problem with complete button visibility.</string>
    <string name="Ride_Bad_Cost_Invalid">Invalid cost.</string>
    <string name="Ride_Bad_Cost_Missing">Missing cost.</string>
    <string name="Ride_Bad_Dest_Missing">Missing destination city.</string>
    <string name="Ride_Bad_maxPass_Invalid">Passenger amount must be greater than 0.</string>
    <string name="Ride_Bad_maxPass_Missing">Missing maximum passengers.</string>
    <string name="Ride_Bad_Message_Visibility">Problem with message button visibility.</string>
    <string name="Ride_Bad_Src_Missing">Missing source city.</string>
    <string name="Ride_Book_Bad_Visibility">Problem with book button visibility.</string>
    <string name="Ride_City_Button">City</string>
    <string name="Ride_City_Title">Select a City</string>
    <string name="Ride_Complete_Button">Terminate Ride</string>
    <string name="Ride_Completion_Failed">Failed to complete the ride.</string>
    <string name="Ride_Completion_Success">Ride completed successfully.</string>
    <string name="Ride_Cost_Free">Free</string>
    <string name="Ride_Create_Button">Create</string>
    <string name="Ride_Create_Cost_Hint">$</string>
    <string name="Ride_Create_Cost_Text">Cost per passenger:</string>
    <string name="Ride_Create_Failed">Failed to create the ride.</string>
    <string name="Ride_Create_maxPass_Text">Maximum passengers:</string>
    <string name="Ride_Create_Offer_Driver">I am a driver making a ride offer</string>
    <string name="Ride_Create_Offer_Passenger">I am a passenger making a ride request</string>
    <string name="Ride_Create_Success">Ride created successfully.</string>
    <string name="Ride_Creating">Creating</string>
    <string name="Ride_Date_Button">Date</string>
    <string name="Ride_Depart_Hint">Leave By:</string>
    <string name="Ride_Dest_Hint">To:</string>
    <string name="Ride_Info_Already_Booked">You booked this ride.</string>
    <string name="Ride_Info_Book_Button">Book this ride</string>
    <string name="Ride_Info_Fulfill_Button">Fulfill this request</string>
    <string name="Ride_Info_Message_Button">Send a message</string>
    <string name="Ride_Info_Owned_Text">You own this ride.</string>
    <string name="Ride_Offer_Driver">Driver</string>
    <string name="Ride_Offer_Passenger">Passenger</string>
    <string name="Ride_Offer_Text">I am a:</string>
    <string name="Ride_Payment_Bad_Month_Invalid">Invalid card expiration month.</string>
    <string name="Ride_Payment_Bad_Month_Missing">Missing card expiration month.</string>
    <string name="Ride_Payment_Bad_Name_Missing">Missing cardhdolder name.</string>
    <string name="Ride_Payment_Bad_Number_Invalid">Invalid credit card number.</string>
    <string name="Ride_Payment_Bad_Year_Invalid">Invalid card expiration year.</string>
    <string name="Ride_Payment_Bad_Year_Length">Invalid card year length.</string>
    <string name="Ride_Payment_Bad_Year_Missing">Missing card expiration year.</string>
    <string name="Ride_Payment_CSV_Hint">CSV </string>
    <string name="Ride_Payment_CSV_Text">Card Security Code</string>
    <string name="Ride_Payment_Expiry_Text">Expiration date: </string>
    <string name="Ride_Payment_Month_Hint">MM</string>
    <string name="Ride_Payment_Name_Text">Name on card: </string>
    <string name="Ride_Payment_Number_Text">Card Number: </string>
    <string name="Ride_Payment_Type_Text">Card Type</string>
    <string name="Ride_Payment_Verify_Button">Verify</string>
    <string name="Ride_Payment_Year_Hint">YY</string>
    <string name="Ride_Pending_Accept">Accept</string>
    <string name="Ride_Pending_Deny">Deny</string>
    <string name="Ride_Search_Button">Search</string>
    <string name="Ride_Search_Failed">Search failed.</string>
    <string name="Ride_Search_Found_Postfix"> rides found.</string>
    <string name="Ride_Search_None">No rides match your query.</string>
    <string name="Ride_Search_Offer_Driver">I am a driver looking for passengers</string>
    <string name="Ride_Search_Offer_Passenger">I am a passenger looking for a driver</string>
    <string name="Ride_Search_Results_Both">to</string>
    <string name="Ride_Search_Results_Create_Text">Did not find what you were looking for? Tap here to create a new ride.</string>
    <string name="Ride_Search_Results_Dest">To:</string>
    <string name="Ride_Search_Results_Neither">No city!</string>
    <string name="Ride_Search_Results_None">No rides match your query</string>
    <string name="Ride_Search_Results_Sort_Title">Sort the search results by</string>
    <string name="Ride_Search_Results_Sort">Sort by</string>
    <string name="Ride_Search_Results_Src">From:</string>
    <string name="Ride_Search_Smoking_False">Non-smoking.</string>
    <string name="Ride_Search_Smoking_True">Smoking allowed.</string>
    <string name="Ride_Search_Success_Postfix">search results.</string>
    <string name="Ride_Search_Success_Prefix">Loading</string>
    <string name="Ride_Searching">Searching</string>
    <string name="Ride_Smoker_Checkbox">Allow smokers</string>
    <string name="Ride_Src_Hint">From:</string>
    <string name="Title_Ride_Booking">Booking</string>
    <string name="Title_Ride_Completion">Ride Completion</string>
    <string name="Title_Ride_Create">Ride Create</string>
    <string name="Title_Ride_Info">Ride Info</string>
    <string name="Title_Ride_Payment">Payment</string>
    <string name="Title_Ride_Pending">Ride Pending</string>
    <string name="Title_Ride_Search_Results">Menu List</string>
    <string name="Title_Ride_Search">Restaurant List</string>
    <string name="Title_Settings">Settings</string>
    <string name="Title_Tabs">FoodApp</string>
    <string name="Title_Test_ListView"></string>
    <string name="Title_Test_Popup"></string>
    <string name="Title_Test_Print"></string>
    <string name="Title_User_Login">User Login</string>
    <string name="Title_User_Register">User Activity</string>
    <string name="Try_Again_Text">Please try again</string>
    <string name="Unicode_False">Default font</string>
    <string name="Unicode_True">Unicode supported font</string>
    <string name="User_Bad_Email">Missing email.</string>
    <string name="User_Bad_Name">Missing name.</string>
    <string name="User_Bad_Password_Change">New password must be different from the current password.</string>
    <string name="User_Bad_Password_Match">Passwords do not match.</string>
    <string name="User_Bad_Password_Verify">Missing verification password.</string>
    <string name="User_Bad_Password">Missing password.</string>
    <string name="User_Email">Email</string>
    <string name="User_Logging_In">Logging in</string>
    <string name="User_Login_Button">Login</string>
    <string name="User_Login_New_Button">Create an account</string>
    <string name="User_Name">Full Name</string>
    <string name="User_New_Password_Verify">Confirm password</string>
    <string name="User_New_Password">Create a password</string>
    <string name="User_Password">Password</string>
    <string name="User_Register_Button">Register</string>
    <string name="User_Register_Email_Used">Email already in use.</string>
    <string name="User_Register_Existing_Button">I already have an account</string>
    <string name="User_Register_init_fail">Email already in use.</string>
    <string name="User_Register">Create an Account</string>
    <string name="User_Registering">Registering</string>
    <string name="User_Search_Button">Search</string>
    <string name="User">User:</string>
    <string name="VERIFY_Button">Verify</string>
    <string name="hello">Hello World, ShowContextMenu!</string>
    <string name="order">Add to Basket and Continue Ordering</string>
    <string name="cancel">Cancel</string>
    <string name="checkout">Add to Basket and Check Out</string>
</resources>
